2007-12-23  Luca Bruno  <lethalman88@gmail.com>

	* plugins/x11/st/Wm.st: removed

	* plugins/x11/plugin-init.c: do not include Xlib_wrap.c

	* plugins/x11/Xlib.i:

	* plugins/x11/SConscript: compile Xlib_wrap.c

	* plugins/x11/Makefile.am: compile Xlib_wrap.c

	* configure.ac: enable debug level and fix plugins support

	* tests/stsupport/TestCStruct.st: update according to the latest changes and add tests for unions

	* tests/testforeignstruct.c (main): test unions

	Specify CStruct/CUnion fields with the same order as real C structs/unions
	for instance #(char f1) instead of the old #(f1 char).
	
	* st/foreign/CPointer.st (asByteArray): added
	(asString): added

	* st/foreign/CStructFieldTypePointer.st: added

	* st/foreign/CStructFieldType.st: handle pointers with a different class

	* st/foreign/CUnion.st: added

	* st/foreign/CUnionGenerator.st: added

	* syx/syx-init.c (_syx_file_in_basic): file in CUnion.st and CUnionGenerator.st

	* syx/syx-primitives.c (CPointer_asString): added
	(CPointer_asByteArray): added

	* plugins/wingui/Makefile.am: fix install dir

	* plugins/readline/Makefile.am: fix install dir
	
	* plugins/gtk/Makefile.am: fix install dir

	* plugins/x11/Makefile.am: fix install dir

2007-12-21  Luca Bruno  <lethalman88@gmail.com>

	Build plugins and install desktop files using the GNU build system.
	
	* plugins/wingui/Makefile.am: added

	* plugins/gtk/Makefile.am: added

	* plugins/readline/Makefile.am: added

	* plugins/x11/Makefile.am: added

	* share/Makefile.am: added
	
        Run tests into the tests directory.
        
        * tests/SConscript (builder_test): use abspath and build into the tests directory

        * Makefile.am (SUBDIRS): add tests

        * tests/Makefile.am: added

        * configure.ac: add st files for the C foreign interface

2007-12-20  Luca Bruno  <lethalman88@gmail.com>

        * tests/stsupport/TestCStruct.st (assertField): test float and doubles
